--- a/architect.css
+++ b/architect.css
@@ -84,6 +84,241 @@ nav li a {
     margin-bottom: 50px;
     padding: 20px 25px;
 }
+/* main part portion 1 */
+main{
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 130px;
+}
+.teams-container{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+
+}
+.image-grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+    margin-right: 73px;
+}
+.image-grid img{
+    width: 342px;
+    height: 342px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 25px black;
+}
+.teams-title{
+    padding-right: 50px;
+    margin-bottom: 24px;
+}
+.quick-list{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 2.8125rem;
+    font-weight: 500;
+}
+.of-our{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 2.8125rem;
+    font-weight: 700;
+}
+.features{
+    color: #FF900E;
+    font-family: Work Sans;
+    font-size: 2.8125rem;
+    font-weight: 700;
+}
+.teams-description{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-style: normal;
+    line-height: 1.625rem;
+}
+
+.features-container{
+    margin-top: 100px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
+.features-text-container{
+    margin-right: 100px ;
+    width: 586px;
+}
+.features-title{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 2.8125rem;
+    font-weight: 700;
+    border-left: 5px solid #FF900E;
+    padding-left: 21px;
+    padding-right: 40px;
+    margin-bottom: 24px;
+
+}
+.features-description{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+    margin-bottom: 60px;
+}
+.features-info-title{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 24px;
+}
+.features-info-description{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+}
+.features-img img{
+    width: 100%;
+}
+.features-card{
+    padding: 30px;
+    border-radius: 8px;
+    background-color: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+.features-card-title{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.features-card-description{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+}
+.ten-years-badge{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 342px;
+    height: 200px;
+    border-radius: 8px;
+    background: #FF900E;
+    text-align: center;
+    margin-bottom: 0;
+    position: relative;
+    bottom: 100px;
+}
+.years{
+    width: 100%;
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 4rem;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+
+}
+.exp{
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 1.rem;
+    font-weight: 500;
+    margin: 0%;
+    padding: 0;
+}
+
+
+/* facts section */
+.facts-container{
+
+}
+.facts-title{
+    color: var(--Dark-01, #131313);
+    font-family: Work Sans;
+    font-size: 2.8125rem;
+    font-weight: 700;
+}
+.facts-description{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem; 
+    margin-top: 21px;
+}
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 70px;
+}
+.facts-card-container .card{
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    text-align: center;
+    padding: 40px 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.card-stat{
+    font-size: 2.8rem;
+    color: #424242;
+
+}
+.card-title{
+    color: var(--Dark-03, #727272);
+    font-family: Work Sans;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+/* sponsors style */
+.sponsors-container{
+    margin-top: 150px;
+    text-align: center;
+}
+.sponsors-img{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    gap: 20px;
+}
+.sponsors-img img{
+    width: 153.333px;
+    height: 50px;
+}
+/* footer */
+footer{
+    width: 1440px;
+    height: 100px;
+    border-radius: 8px;
+    background: #FFF4E7;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 130px;
+    margin-bottom: 20px;
+}
+.footer{
+    color: var(--Dark-02, #424242);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 1.25rem;
+    font-weight: 400;   
+}
 /* responsive styles */
 @media screen and (max-width:576px){
     header{
@@ -92,13 +327,104 @@ nav li a {
     .banner-info{
         width: 100%;
     }
-    nav , .nav-items ul {
+    nav , .nav-items ul , .teams-container , .facts-card-container , .sponsors-img ,.features-container {
         flex-direction: column;
     }
+    .teams-title{
+        margin-top: 50px;
+        padding: 10px;
+    }
+    .image-grid{
+        grid-template-columns: repeat(1,1fr);
+        gap: 10px;
+        margin: 0;
+        
+    }
+    .team-content{
+        
+    }
+    .teams-container{
+        margin: 0;
+    }
+    .image-grid img{
+        width: 100%;
+        height: 100%;
+        box-shadow: none;
+    }
+    .teams-description{
+        padding: 10px;
+    }
+    .btn-primary{
+        margin: 10px;
+    }
+    .facts-card-container{
+        padding: 20px;
+        gap: 20px;
+    }
+    .facts-container{
+        padding: 20px;
+    }
+    .sponsors-img{
+        align-items: center;
+        gap: 50px;
+    }
+    .sponsors-container{
+        padding: 20px;
+    }
+    .features-container{
+     margin: 0 auto;
+    }
+    .features-img{
+        width: 90%;
+        margin-left: auto;
+        margin-right:auto ;
+    }
+    .features-card{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .features-card-title ,.features-card-description{
+        padding: 10px;
+    }
+    .features-text-container{
+        
+        width: 100%;
+    }
+    .facts-container{
+        margin: 10px;
+    }
+    .features-title{
+        padding: 10px;
+    }
+    .features-description{
+        padding: 10px;
+    }
+    .ten-years-badge{
+        position: static;
+        margin: 0 auto;
+        max-width: 200px;
+        margin-top: 30px;
+    }
+    footer{
+        width: 100%;
+        margin: 0 auto;
+    }
+    .features-text-container{
+        margin: 0;
+    }
+    
 }
+
 @media screen and (min-width:576px) and (max-width:992px){
-    nav{
+    nav , .facts-card-container , .sponsors-img , .features-container {
         flex-direction: column;
+    }
+    .nav-title{
+        margin-bottom: 30px;
+    }
+    .teams-container{
+        flex-direction: column-reverse;
     }
     header{
         padding:50px;
@@ -106,4 +432,78 @@ nav li a {
     .banner-info{
         width: 100%;
     }
+    .teams-title{
+        margin-top: 50px;
+        padding: 10px;
+        margin-bottom: 0;
+    }
+    .teams-description{
+        padding: 10px;
+        margin: 5px;
+    }
+    .btn-primary{
+        margin: 10px;
+        margin-bottom: 50px;
+    }
+    .image-grid{
+        gap: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+    .image-grid img{
+        box-shadow: none;
+    }
+    .facts-card-container{
+        padding: 50px;
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .facts-container{
+        padding: 20px;
+        text-align: center;
+        margin-top: 20px;
+    }
+    .sponsors-img{
+        align-items: center;
+        gap: 50px;
+    }
+    .sponsors-container{
+        padding: 20px;
+    }
+    .features-container{
+        margin: 0 auto;
+       }
+       .features-img{
+           width: 90%;
+           margin-left: auto;
+           margin-right:auto ;
+       }
+       .features-card{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .features-card-title ,.features-card-description{
+        padding: 10px;
+    }
+       .features-text-container{
+           
+           width: 100%;
+       }
+       .features-title{
+           padding: 10px;
+       }
+       .features-description{
+           padding: 10px;
+       }
+       .ten-years-badge{
+           position: static;
+           margin: 0 auto;
+           max-width: 200px;
+       }
+   }
+   footer{
+    width: 100%;
+    margin: 0 auto;
 }
